# pyColumnDB

./: .gitignore  CDB_FILE_FORMAT.md  CONTRIBUTING.md  FILE_PERSISTENCE_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  UV_GUIDE.md  UV_SETUP_SUMMARY.md  WINDOWS_BUILD_SUCCESS.md  pyproject.toml  requirements-dev.txt  setup.py  setup_wizard.py  verify_structure.py
columndb/: __init__.py
docs/: README.md
examples/: basic_usage.py  file_persistence.py
include/: column_db.h
src/: column_db.c  column_db_fileio.c  columndb_extension.c
tests/: test_columndb.py
